--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/sonarlint
+.idea/gradle.xml
+.idea/.gitignore
 .idea/*
 *.iws
 *.iml
